# rifa_ieee

./: .gitignore  README.md  credentials.json  pyproject.toml
.devcontainer/: devcontainer.json
rifa_app/: app.py  sheets_manager.py  utils.py
