[project]
name = "rifa-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Rocha",email = "pedrorrochaj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "gspread (>=6.2.0,<7.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "google-auth (>=2.39.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-api-python-client (>=2.167.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

